Fixed some text visibility issues with different themes

--- a/src/css/mspaThemes.scss
+++ b/src/css/mspaThemes.scss
@@ -2,6 +2,7 @@
 	--font-default: #000000;
 	--font-header: #000000;
 	--font-ctx: #000000;
+	--font-log: #000000;
 	--font-disabled: darkgrey;
 
 	--header-bg: #EEEEEE;
@@ -65,6 +66,7 @@
 		--font-default: #ffffff;
 		--font-header: #ffffff;
 		--font-ctx: #ffffff;
+		--font-log: #ffffff;
 		--font-highlight: #000000;
 		--font-disabled: rgba(255, 255, 255, 0.2);
 
